src/main/java/org/example/ordersystem/Errors/DuplicateResourceException.java
package org.example.ordersystem.Errors;

public class DuplicateResourceException extends RuntimeException {
    public DuplicateResourceException(String message) {
        super(message);
    }
}
